Add basic HTML structure

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </section>
     </nav>
     <header>
-        <hgroup>
+        <hgroup class="d-flex f-column">
             <h4>"Hello! Sharing World"</h4>
             <h1>Creative Commons Global Summit 2015</h1>
             <h5>Description Here</h5>
@@ -33,7 +33,54 @@
             <h3>Place Here</h3>
         </hgroup>
     </header>
-    <main></main>
-    <footer></footer>
+    <main class="d-flex f-column">
+        <section id="main-program">
+            <h2>Main Program</h2>
+            <div class="underline"></div>
+            <div></div>
+            <div class="d-flex">
+                <div class="card-program t-center"></div>
+                <div class="card-program t-center"></div>
+                <div class="card-program t-center"></div>
+                <div class="card-program t-center"></div>
+                <div class="card-program t-center"></div>
+            </div>
+            <a href="#">Join</a>
+        </section>
+        <section id="featured-speakers" class="d-grid">
+            <div class="card-speaker">
+                <div></div>
+                <div></div>
+            </div>
+            <div class="card-speaker">
+                <div></div>
+                <div></div>
+            </div>
+            <div class="card-speaker">
+                <div></div>
+                <div></div>
+            </div>
+            <div class="card-speaker">
+                <div></div>
+                <div></div>
+            </div>
+            <div class="card-speaker">
+                <div></div>
+                <div></div>
+            </div>
+            <div class="card-speaker">
+                <div></div>
+                <div></div>
+            </div>
+        </section>
+        <button>More</button>
+    </main>
+    <footer>
+        <section id="parterns">
+            <h2>Partner</h2>
+            <div id="img-div"></div>
+        </section>
+        <section id="copyrights" class="d-flex"></section>
+    </footer>
 </body>
 </html>
