Add Hamburger Button Animation

--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
     <title>Document</title>
 </head>
 <body>
-    <nav>
+    <div id="mobile-menu-left" class="hide-menu2"></div>
+    <nav class="m-0-1">
         <section id="mobile-menu">
-            <ul>
+            <ul id="mobile-nav" class="hide-menu">
                 <li><a href="#">About</a></li>
                 <li><a href="#">Program</a></li>
                 <li><a href="#">Join</a></li>
                 <li><a href="#">Sponsor</a></li>
                 <li><a href="#">News</a></li>
             </ul>
-            <div id="mobile-menu-btn">
+            <div id="mobile-menu-btn" class="d-flex d-center">
                 <div id="mobile-menu-burger">
-                    &times;
                 </div>
             </div>
         </section>
     </nav>
-    <header>
+    <header class="m-0-1">
         <hgroup class="d-flex f-column">
             <h4>"Hello! Sharing World"</h4>
             <h1>Creative Commons Global Summit 2015</h1>
@@ -33,7 +33,7 @@
             <h3>Place Here</h3>
         </hgroup>
     </header>
-    <main class="d-flex f-column">
+    <main class="d-flex f-column m-0-1">
         <section id="main-program">
             <h2>Main Program</h2>
             <div class="underline"></div>
@@ -75,12 +75,13 @@
         </section>
         <button>More</button>
     </main>
-    <footer>
+    <footer class="m-0-1">
         <section id="parterns">
             <h2>Partner</h2>
             <div id="img-div"></div>
         </section>
         <section id="copyrights" class="d-flex"></section>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
