--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <nav class="m-0-1">
+    <nav>
         <section id="mobile-menu">
             <div id="mobile-menu-left" class="hide-menu2"></div>
             <ul id="mobile-nav" class="hide-menu">
@@ -24,13 +24,15 @@
             </div>
         </section>
     </nav>
-    <header class="m-0-1">
-        <hgroup class="d-flex f-column">
-            <h4>"Hello! Sharing World"</h4>
-            <h1>Creative Commons Global Summit 2015</h1>
-            <h5>Description Here</h5>
-            <h2>Date Here</h2>
-            <h3>Place Here</h3>
+    <header>
+        <hgroup>
+            <h4>"Hello Drummers!"</h4>
+            <h1>Legenderies Gathering in Antalya Summit 2021</h1>
+            <h5>Great Drummers of Turkey Gathering for sharing their knowledges, creating positive 
+                change in your music life. Join the audiance in October, in Turkey/Antalya.
+            </h5>
+            <h2>2021.10.26 ~ 31</h2>
+            <h3>@Antalya Expo Center</h3>
         </hgroup>
     </header>
     <main class="d-flex f-column m-0-1">
