Add Main Program CSS

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
@@ -36,18 +37,37 @@
         </hgroup>
     </header>
     <main class="d-flex f-column m-0-1">
-        <section id="main-program">
+        <section id="main-program" class="d-flex f-column d-center">
             <h2>Main Program</h2>
             <div class="underline"></div>
-            <div></div>
-            <div class="d-flex">
-                <div class="card-program t-center"></div>
-                <div class="card-program t-center"></div>
-                <div class="card-program t-center"></div>
-                <div class="card-program t-center"></div>
-                <div class="card-program t-center"></div>
+            <div class="d-flex f-column" id="program-cards">
+                <div class="card-program t-center d-flex d-center">
+                    <i class="fas fa-user fa-3x"></i>
+                    <h4>Lecture</h4>
+                    <p>Listen to the drummers with various background. Their exprience about sector</p>
+                </div>
+                <div class="card-program d-flex t-center d-flex d-center">
+                    <i class="fas fa-drum fa-3x"></i>
+                    <h4>Exhibition</h4>
+                    <p>Checkout the various drum producers</p>
+                </div>
+                <div class="card-program d-flex t-center d-flex d-center">
+                    <i class="fas fa-comments fa-3x"></i>
+                    <h4>Forum</h4>
+                    <p>Share your opinions and ask questions</p>
+                </div>
+                <div class="card-program d-flex t-center">
+                    <i class="fas fa-music fa-3x"></i>
+                    <h4>Workshop</h4>
+                    <p>Listen and learn from masters</p>
+                </div>
+                <div class="card-program d-flex t-center">
+                    <i class="fas fa-dharmachakra fa-3x"></i>
+                    <h4>Network</h4>
+                    <p>Get oppurtinies by meeting fellow drummers.</p>
+                </div>
             </div>
-            <a href="#">Join</a>
+            <a href="#" id="join-button" class="t-center">Join 2021 Antalya Summit</a>
         </section>
         <section id="featured-speakers" class="d-grid">
             <div class="card-speaker">
