Add flex/flex-shring to card-program

--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
                     <h4>Forum</h4>
                     <p>Share your opinions and ask questions</p>
                 </div>
-                <div class="card-program d-flex t-center">
+                <div class="card-program d-flex t-center d-center">
                     <i class="fas fa-music fa-3x"></i>
                     <h4>Workshop</h4>
                     <p>Listen and learn from masters</p>
                 </div>
-                <div class="card-program d-flex t-center">
+                <div class="card-program d-flex t-center d-center">
                     <i class="fas fa-dharmachakra fa-3x"></i>
                     <h4>Network</h4>
                     <p>Get oppurtinies by meeting fellow drummers.</p>
