Add Speakers Section

--- a/index.html
+++ b/index.html
@@ -69,30 +69,60 @@
             </div>
             <a href="#" id="join-button" class="t-center">Join 2021 Antalya Summit</a>
         </section>
-        <section id="featured-speakers" class="d-grid">
-            <div class="card-speaker">
-                <div></div>
-                <div></div>
+        <section id="featured-speakers">
+            <div class="card-speaker d-flex">
+                <img class="speaker-image" src="img/CengizTural.jpg" alt="Cengiz Tural">
+                <div>
+                    <h2 class="speaker-name">Cengiz Tural</h2>
+                    <p class="speaker-resume">Resume</p>
+                    <div class="speaker-line"></div>
+                    <p class="speaker-description">Drummer of bla bla</p>
+                </div>
             </div>
-            <div class="card-speaker">
-                <div></div>
-                <div></div>
+            <div class="card-speaker d-flex">
+                <img class="speaker-image" src="img/VolkanOktem.jpg" alt="Volkan Oktem">
+                <div>
+                    <h2 class="speaker-name">Cengiz Tural</h2>
+                    <p class="speaker-resume">Resume</p>
+                    <div class="speaker-line"></div>
+                    <p class="speaker-description">Drummer of bla bla</p>
+                </div> 
             </div>
-            <div class="card-speaker">
-                <div></div>
-                <div></div>
+            <div class="card-speaker d-flex">
+                <img class="speaker-image" src="img/MertIsilay.jpg" alt="Mert Isilay">
+                <div>
+                    <h2 class="speaker-name">Cengiz Tural</h2>
+                    <p class="speaker-resume">Resume</p>
+                    <div class="speaker-line"></div>
+                    <p class="speaker-description">Drummer of bla bla</p>
+                </div>
             </div>
-            <div class="card-speaker">
-                <div></div>
-                <div></div>
+            <div class="card-speaker d-flex">
+                <img class="speaker-image" src="img/ArikanSirakaya.jpeg" alt="Arikan Sirakaya">
+                <div>
+                    <h2 class="speaker-name">Cengiz Tural</h2>
+                    <p class="speaker-resume">Resume</p>
+                    <div class="speaker-line"></div>
+                    <p class="speaker-description">Drummer of bla bla</p>
+                </div>
             </div>
-            <div class="card-speaker">
-                <div></div>
-                <div></div>
+            <div class="card-speaker d-flex">
+                <img class="speaker-image" src="img/BurakGurpinar.jpg" alt="Burak Gurpinar">
+                <div>
+                    <h2 class="speaker-name">Cengiz Tural</h2>
+                    <p class="speaker-resume">Resume</p>
+                    <div class="speaker-line"></div>
+                    <p class="speaker-description">Drummer of bla bla</p>
+                </div>
             </div>
-            <div class="card-speaker">
-                <div></div>
-                <div></div>
+            <div class="card-speaker d-flex">
+                <img class="speaker-image" src="img/AlenKonakoglu.jpg" alt="Alen Konakoglu">
+                <div>
+                    <h2 class="speaker-name">Cengiz Tural</h2>
+                    <p class="speaker-resume">Resume</p>
+                    <div class="speaker-line"></div>
+                    <p class="speaker-description">Drummer of bla bla</p>
+                </div>
             </div>
         </section>
         <button>More</button>
