Update More Button JavaScript

--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
             <div class="card-speaker d-flex">
                 <img class="speaker-image" src="img/VolkanOktem.jpg" alt="Volkan Oktem">
                 <div>
-                    <h3 class="speaker-name">Cengiz Tural</h3>
+                    <h3 class="speaker-name"></h3>
                     <p class="speaker-resume">Resume</p>
                     <div class="speaker-line"></div>
                     <p class="speaker-description">Drummer of bla bla</p>
                 </div> 
             </div>
-            <div class="card-speaker d-flex">
+            <div class="card-speaker d-none">
                 <img class="speaker-image" src="img/MertIsilay.jpg" alt="Mert Isilay">
                 <div>
                     <h3 class="speaker-name">Cengiz Tural</h3>
@@ -97,7 +97,7 @@
                     <p class="speaker-description">Drummer of bla bla</p>
                 </div>
             </div>
-            <div class="card-speaker d-flex">
+            <div class="card-speaker d-none">
                 <img class="speaker-image" src="img/ArikanSirakaya.jpeg" alt="Arikan Sirakaya">
                 <div>
                     <h3 class="speaker-name">Cengiz Tural</h3>
@@ -106,7 +106,7 @@
                     <p class="speaker-description">Drummer of bla bla</p>
                 </div>
             </div>
-            <div class="card-speaker d-flex">
+            <div class="card-speaker d-none">
                 <img class="speaker-image" src="img/BurakGurpinar.jpg" alt="Burak Gurpinar">
                 <div>
                     <h3 class="speaker-name">Cengiz Tural</h3>
@@ -115,17 +115,17 @@
                     <p class="speaker-description">Drummer of bla bla</p>
                 </div>
             </div>
-            <div class="card-speaker d-flex">
+            <div class="card-speaker d-none">
                 <img class="speaker-image" src="img/AlenKonakoglu.jpg" alt="Alen Konakoglu">
                 <div>
-                    <h3 class="speaker-name">Cengiz Tural</h3>
+                    <h3 class="speaker-name"></h3>
                     <p class="speaker-resume">Resume</p>
                     <div class="speaker-line"></div>
                     <p class="speaker-description">Drummer of bla bla</p>
                 </div>
             </div>
         </section>
-        <button>More</button>
+        <button id="see-more">More</button>
     </main>
     <footer class="m-0-1">
         <section id="parterns">
