Add Effects to Speaker Cards

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <p class="speaker-description">Drummer of bla bla</p>
                 </div> 
             </div>
-            <div class="card-speaker d-none">
+            <div class="card-speaker d-flex ts-1 hide-menu2">
                 <img class="speaker-image" src="img/MertIsilay.jpg" alt="Mert Isilay">
                 <div>
                     <h3 class="speaker-name">Cengiz Tural</h3>
@@ -97,7 +97,7 @@
                     <p class="speaker-description">Drummer of bla bla</p>
                 </div>
             </div>
-            <div class="card-speaker d-none">
+            <div class="card-speaker d-flex ts-12 hide-menu2">
                 <img class="speaker-image" src="img/ArikanSirakaya.jpeg" alt="Arikan Sirakaya">
                 <div>
                     <h3 class="speaker-name">Cengiz Tural</h3>
@@ -106,7 +106,7 @@
                     <p class="speaker-description">Drummer of bla bla</p>
                 </div>
             </div>
-            <div class="card-speaker d-none">
+            <div class="card-speaker d-flex ts-14 hide-menu2">
                 <img class="speaker-image" src="img/BurakGurpinar.jpg" alt="Burak Gurpinar">
                 <div>
                     <h3 class="speaker-name">Cengiz Tural</h3>
@@ -115,7 +115,7 @@
                     <p class="speaker-description">Drummer of bla bla</p>
                 </div>
             </div>
-            <div class="card-speaker d-none">
+            <div class="card-speaker d-flex ts-16 hide-menu2">
                 <img class="speaker-image" src="img/AlenKonakoglu.jpg" alt="Alen Konakoglu">
                 <div>
                     <h3 class="speaker-name"></h3>
