Add Window Load for Speaker cards

--- a/index.html
+++ b/index.html
@@ -71,57 +71,57 @@
         </section>
         <section id="featured-speakers">
             <div class="card-speaker d-flex">
-                <img class="speaker-image" src="img/CengizTural.jpg" alt="Cengiz Tural">
+                <img class="speaker-image" src="..." alt="">
                 <div>
-                    <h3 class="speaker-name">Cengiz Tural</h3>
-                    <p class="speaker-resume">Resume</p>
+                    <h3 class="speaker-name"></h3>
+                    <p class="speaker-resume"></p>
                     <div class="speaker-line"></div>
-                    <p class="speaker-description">Drummer of bla bla</p>
+                    <p class="speaker-description"></p>
                 </div>
             </div>
             <div class="card-speaker d-flex">
-                <img class="speaker-image" src="img/VolkanOktem.jpg" alt="Volkan Oktem">
+                <img class="speaker-image" src="..." alt="">
                 <div>
                     <h3 class="speaker-name"></h3>
-                    <p class="speaker-resume">Resume</p>
+                    <p class="speaker-resume"></p>
                     <div class="speaker-line"></div>
-                    <p class="speaker-description">Drummer of bla bla</p>
-                </div> 
+                    <p class="speaker-description"></p>
+                </div>
             </div>
             <div class="card-speaker d-flex ts-1 hide-menu2">
-                <img class="speaker-image" src="img/MertIsilay.jpg" alt="Mert Isilay">
+                <img class="speaker-image" src="..." alt="">
                 <div>
-                    <h3 class="speaker-name">Cengiz Tural</h3>
-                    <p class="speaker-resume">Resume</p>
+                    <h3 class="speaker-name"></h3>
+                    <p class="speaker-resume"></p>
                     <div class="speaker-line"></div>
-                    <p class="speaker-description">Drummer of bla bla</p>
+                    <p class="speaker-description"></p>
                 </div>
             </div>
             <div class="card-speaker d-flex ts-12 hide-menu2">
-                <img class="speaker-image" src="img/ArikanSirakaya.jpeg" alt="Arikan Sirakaya">
+                <img class="speaker-image" src="..." alt="">
                 <div>
-                    <h3 class="speaker-name">Cengiz Tural</h3>
-                    <p class="speaker-resume">Resume</p>
+                    <h3 class="speaker-name"></h3>
+                    <p class="speaker-resume"></p>
                     <div class="speaker-line"></div>
-                    <p class="speaker-description">Drummer of bla bla</p>
+                    <p class="speaker-description"></p>
                 </div>
             </div>
             <div class="card-speaker d-flex ts-14 hide-menu2">
-                <img class="speaker-image" src="img/BurakGurpinar.jpg" alt="Burak Gurpinar">
+                <img class="speaker-image" src="..." alt="">
                 <div>
-                    <h3 class="speaker-name">Cengiz Tural</h3>
-                    <p class="speaker-resume">Resume</p>
+                    <h3 class="speaker-name"></h3>
+                    <p class="speaker-resume"></p>
                     <div class="speaker-line"></div>
-                    <p class="speaker-description">Drummer of bla bla</p>
+                    <p class="speaker-description"></p>
                 </div>
             </div>
             <div class="card-speaker d-flex ts-16 hide-menu2">
-                <img class="speaker-image" src="img/AlenKonakoglu.jpg" alt="Alen Konakoglu">
+                <img class="speaker-image" src="..." alt="">
                 <div>
                     <h3 class="speaker-name"></h3>
-                    <p class="speaker-resume">Resume</p>
+                    <p class="speaker-resume"></p>
                     <div class="speaker-line"></div>
-                    <p class="speaker-description">Drummer of bla bla</p>
+                    <p class="speaker-description"></p>
                 </div>
             </div>
         </section>
