Add Partner Logos to IMG File

--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
         </section>
         <button id="see-more">More</button>
     </main>
-    <footer class="m-0-1">
+    <footer class="m-0-1 t-center">
         <section id="parterns">
-            <h2>Partner</h2>
+            <h2>Partners</h2>
             <div id="img-div"></div>
         </section>
         <section id="copyrights" class="d-flex"></section>
