Add HTML-CSS-JavaScript for Footer Section

--- a/index.html
+++ b/index.html
@@ -127,10 +127,19 @@
         </section>
         <button id="see-more">More</button>
     </main>
-    <footer class="m-0-1 t-center">
+    <footer class="m-0-1 t-center d-flex f-column">
         <section id="parterns">
             <h2>Partners</h2>
-            <div id="img-div"></div>
+            <div class="underline"></div>
+            <div id="img-div">
+                <img src="img/TamaLogo.png" alt="Tama Drums">
+                <img src="img/DwLogo.png" alt="DW Drums">
+                <img src="img/YamahaLogo.jpeg" alt="Yamaha Drums">
+                <img src="img/ProMarkLogo.png" alt="ProMark Drumsticks">
+                <img src="img/IstanbulCymbalsLogo.jpeg" alt="Istanbul Cymbals">
+                <img src="img/ZildjianCymbalsLogo.png" alt="Zildjian Cymbals">
+                <img src="img/EvansLogo.png" alt="Evans Drumheads">
+            </div>
         </section>
         <section id="copyrights" class="d-flex"></section>
     </footer>
