--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <p class="speaker-description"></p>
                 </div>
             </div>
-            <div class="card-speaker d-flex ts-1 hide-menu2">
+            <div class="card-speaker d-flex p-fixed ts-1 hide-menu2">
                 <img class="speaker-image" src="..." alt="">
                 <div>
                     <h3 class="speaker-name"></h3>
@@ -97,7 +97,7 @@
                     <p class="speaker-description"></p>
                 </div>
             </div>
-            <div class="card-speaker d-flex ts-12 hide-menu2">
+            <div class="card-speaker d-flex p-fixed ts-12 hide-menu2">
                 <img class="speaker-image" src="..." alt="">
                 <div>
                     <h3 class="speaker-name"></h3>
@@ -106,7 +106,7 @@
                     <p class="speaker-description"></p>
                 </div>
             </div>
-            <div class="card-speaker d-flex ts-14 hide-menu2">
+            <div class="card-speaker d-flex p-fixed ts-14 hide-menu2">
                 <img class="speaker-image" src="..." alt="">
                 <div>
                     <h3 class="speaker-name"></h3>
@@ -115,7 +115,7 @@
                     <p class="speaker-description"></p>
                 </div>
             </div>
-            <div class="card-speaker d-flex ts-16 hide-menu2">
+            <div class="card-speaker d-flex p-fixed ts-16 hide-menu2">
                 <img class="speaker-image" src="..." alt="">
                 <div>
                     <h3 class="speaker-name"></h3>
@@ -125,7 +125,7 @@
                 </div>
             </div>
         </section>
-        <button id="see-more">More</button>
+        <button id="see-more">More<span>&DownArrow;</span> </button>
     </main>
     <footer class="m-0-1 t-center d-flex f-column">
         <section id="parterns">
