Update Header Section CSS

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <h5>Great Drummers of Turkey Gathering for sharing their knowledges, creating positive 
                 change in your music life. Join the audiance in October, in Turkey/Antalya.
             </h5>
-            <h2>2021.10.26 ~ 31</h2>
-            <h3>@Antalya Expo Center</h3>
+            <h2>2021.10.26(THU) ~ 31(SUN)</h2>
+            <h3>@Antalya EXPO Exhibit Space, Aksu/Antalya/Turkey</h3>
         </hgroup>
     </header>
     <main class="d-flex f-column m-0-1">
