--- a/index.html
+++ b/index.html
@@ -44,33 +44,33 @@
             <h2>Main Program</h2>
             <div class="underline"></div>
             <div class="d-flex f-column" id="program-cards">
-                <div class="card-program t-center d-flex d-center">
+                <div class="card-program d-flex d-center">
                     <i class="fas fa-user fa-3x"></i>
                     <h4>Lecture</h4>
                     <p>Listen to the drummers with various background. Their exprience about sector</p>
                 </div>
-                <div class="card-program d-flex t-center d-flex d-center">
+                <div class="card-program d-flex d-flex d-center">
                     <i class="fas fa-drum fa-3x"></i>
                     <h4>Exhibition</h4>
                     <p>Checkout the various drum producers</p>
                 </div>
-                <div class="card-program d-flex t-center d-flex d-center">
+                <div class="card-program d-flex d-flex d-center">
                     <i class="fas fa-comments fa-3x"></i>
                     <h4>Forum</h4>
                     <p>Share your opinions and ask questions</p>
                 </div>
-                <div class="card-program d-flex t-center d-center">
+                <div class="card-program d-flex d-center">
                     <i class="fas fa-music fa-3x"></i>
                     <h4>Workshop</h4>
                     <p>Listen and learn from masters</p>
                 </div>
-                <div class="card-program d-flex t-center d-center">
+                <div class="card-program d-flex d-center">
                     <i class="fas fa-dharmachakra fa-3x"></i>
                     <h4>Network</h4>
                     <p>Get oppurtinies by meeting fellow drummers.</p>
                 </div>
             </div>
-            <a href="#" id="join-button" class="t-center">Join 2021 Antalya Summit</a>
+            <a href="#" id="join-button" class="t-center">Join Antalya Summit 2021</a>
         </section>
         <section id="featured-speakers">
             <div class="card-speaker d-flex">
