Add Speaker Img Frame

--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
             <a href="#" id="join-button" class="t-center">Join Antalya Summit 2021</a>
         </section>
         <section id="featured-speakers">
+            <h2>Featured Speakers</h2>
+            <div class="underline"></div>
             <div class="card-speaker d-flex">
                 <img class="speaker-image" src="..." alt="">
                 <div>
