Update More Button CSS

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 </div>
             </div>
         </section>
-        <button id="see-more">More<span>&DownArrow;</span></button>
+        <button id="see-more">MORE<span>&DownArrow;</span></button>
     </main>
     <footer class="m-0-1 t-center d-flex f-column">
         <section id="parterns">
