Add About Header-nav

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet"> 
-    <title>Document</title>
+    <title>Home</title>
 </head>
 <body>
     <nav>
         <section id="mobile-menu">
             <div id="mobile-menu-left" class="hide-menu2"></div>
             <ul id="mobile-nav" class="hide-menu">
-                <li><a href="#">About</a></li>
+                <li><a href="pages/about.html">About</a></li>
                 <li><a href="#">Program</a></li>
                 <li><a href="#">Join</a></li>
                 <li><a href="#">Sponsor</a></li>
