Update Aboutpage Header

--- a/pages/about.html
+++ b/pages/about.html
@@ -42,9 +42,14 @@
       <h5>Great Drummers of Turkey Gathering for sharing their knowledges, creating positive 
         change in your music life. Join the audiance in October, in Turkey/Antalya.
       </h5>
+      <section id="contact">
+        <p>Please contact us per Email for any further questions about
+          Antalya Drummers Summit 2021
+        </p>
+        <a href="#">ADS2021@orcun.org</a>
+      </section>
     </header>
     <main>
-      <section id="contact"></section>
     </main>
   </body>
 </html>
