Add HTML of Aboutpage

--- a/pages/about.html
+++ b/pages/about.html
@@ -35,21 +35,58 @@
         </div>
       </section>
     </nav>
-    <script src="aboutscript.js"></script>
     <header class="t-center">
       <h4>Hello Drummers!</h4>
       <h1>Legenderies Gathering in Antalya Summit 2021</h1>
-      <h5>Great Drummers of Turkey Gathering for sharing their knowledges, creating positive 
-        change in your music life. Join the audiance in October, in Turkey/Antalya.
+      <h5>
+        Great Drummers of Turkey Gathering for sharing their knowledges,
+        creating positive change in your music life. Join the audiance in
+        October, in Turkey/Antalya.
       </h5>
       <section id="contact">
-        <p>Please contact us per Email for any further questions about
-          Antalya Drummers Summit 2021
+        <p>
+          Please contact us per Email for any further questions about Antalya
+          Drummers Summit 2021
         </p>
         <a href="#">ADS2021@orcun.org</a>
       </section>
     </header>
     <main>
+      <section id="logo-section">
+        <h2>Antalya Drummer Summit 2021 Logo</h2>
+        <div class="underline"></div>
+        <p>
+          The logo of Antalya Drummers Summit 2021 was created by Orçun Uğur
+        </p>
+        <img src="../img/icon/MainIcon.png" alt="Main Logo" />
+      </section>
+      <br />
+      <section id="past-sections">
+        <h2>See the past Drummers Summit</h2>
+        <p>
+          Take a loog at the first two Drummers summit which took place in
+          Istanbul and Izmir
+        </p>
+        <div class="past-box"></div>
+        <div class="past-box"></div>
+      </section>
+      <footer class="m-0-1 t-center d-flex f-column">
+        <section id="parterns">
+          <h2>Partners</h2>
+          <div class="underline"></div>
+          <div id="img-div" class="d-flex d-center">
+            <img src="img/IstanbulCymbalsLogo.jpeg" alt="Istanbul Cymbals" />
+            <img src="img/ZildjianCymbalsLogo.png" alt="Zildjian Cymbals" />
+            <img src="img/EvansLogo.png" alt="Evans Drumheads" />
+            <img src="img/DwLogo.png" alt="DW Drums" />
+            <img src="img/YamahaLogo.jpeg" alt="Yamaha Drums" />
+            <img src="img/ProMarkLogo.png" alt="ProMark Drumsticks" />
+            <img src="img/TamaLogo.png" alt="Tama Drums" />
+          </div>
+        </section>
+        <section id="copyrights" class="d-flex"></section>
+      </footer>
+      <script src="aboutscript.js"></script>
     </main>
   </body>
 </html>
