--- a/pages/about.html
+++ b/pages/about.html
@@ -75,13 +75,13 @@
           <h2>Partners</h2>
           <div class="underline"></div>
           <div id="img-div" class="d-flex d-center">
-            <img src="img/IstanbulCymbalsLogo.jpeg" alt="Istanbul Cymbals" />
-            <img src="img/ZildjianCymbalsLogo.png" alt="Zildjian Cymbals" />
-            <img src="img/EvansLogo.png" alt="Evans Drumheads" />
-            <img src="img/DwLogo.png" alt="DW Drums" />
-            <img src="img/YamahaLogo.jpeg" alt="Yamaha Drums" />
-            <img src="img/ProMarkLogo.png" alt="ProMark Drumsticks" />
-            <img src="img/TamaLogo.png" alt="Tama Drums" />
+            <img src="../img/IstanbulCymbalsLogo.jpeg" alt="Istanbul Cymbals" />
+            <img src="../img/ZildjianCymbalsLogo.png" alt="Zildjian Cymbals" />
+            <img src="../img/EvansLogo.png" alt="Evans Drumheads" />
+            <img src="../img/DwLogo.png" alt="DW Drums" />
+            <img src="../img/YamahaLogo.jpeg" alt="Yamaha Drums" />
+            <img src="../img/ProMarkLogo.png" alt="ProMark Drumsticks" />
+            <img src="../img/TamaLogo.png" alt="Tama Drums" />
           </div>
         </section>
         <section id="copyrights" class="d-flex"></section>
