Update Past Section

--- a/pages/about.html
+++ b/pages/about.html
@@ -52,41 +52,54 @@
       </section>
     </header>
     <main>
-      <section id="logo-section">
+      <section id="logo-section" class="d-flex f-column t-center">
         <h2>Antalya Drummer Summit 2021 Logo</h2>
         <div class="underline"></div>
         <p>
-          The logo of Antalya Drummers Summit 2021 was created by Orçun Uğur
+          The logo of Antalya Drummers Summit 2021 was created by Orçun Ugur
         </p>
         <img src="../img/icon/MainIcon.png" alt="Main Logo" />
       </section>
       <br />
-      <section id="past-sections">
-        <h2>See the past Drummers Summit</h2>
-        <p>
+      <section id="past-sections" class="d-flex f-column">
+        <h2 class="t-center">See the past Drummers Summit</h2>
+        <div class="underline"></div>
+        <p class="t-center">
           Take a loog at the first two Drummers summit which took place in
           Istanbul and Izmir
         </p>
-        <div class="past-box"></div>
-        <div class="past-box"></div>
-      </section>
-      <footer class="m-0-1 t-center d-flex f-column">
-        <section id="parterns">
-          <h2>Partners</h2>
-          <div class="underline"></div>
-          <div id="img-div" class="d-flex d-center">
-            <img src="../img/IstanbulCymbalsLogo.jpeg" alt="Istanbul Cymbals" />
-            <img src="../img/ZildjianCymbalsLogo.png" alt="Zildjian Cymbals" />
-            <img src="../img/EvansLogo.png" alt="Evans Drumheads" />
-            <img src="../img/DwLogo.png" alt="DW Drums" />
-            <img src="../img/YamahaLogo.jpeg" alt="Yamaha Drums" />
-            <img src="../img/ProMarkLogo.png" alt="ProMark Drumsticks" />
-            <img src="../img/TamaLogo.png" alt="Tama Drums" />
+        <div class="past-box" id="past-box-1">
+          <img src="../img/Past1.jpg" alt="Past Summit 2020" />
+          <div class="past-box-desc t-center">
+            <h2>2020</h2>
+            <h5>Drummers Summit 2020 in Izmir</h5>
           </div>
-        </section>
-        <section id="copyrights" class="d-flex"></section>
-      </footer>
-      <script src="aboutscript.js"></script>
+        </div>
+        <div class="past-box" id="past-box-2">
+          <img src="../img/Past2.jpg" alt="Past Summit 2019" />
+          <div class="past-box-desc t-center">
+            <h2>2019</h2>
+            <h5>Drummers Summit 2019 in Istanbul</h5>
+          </div>
+        </div>
+      </section>
     </main>
+    <footer class="m-0-1 t-center d-flex f-column">
+      <section id="parterns">
+        <h2>Partners</h2>
+        <div class="underline"></div>
+        <div id="img-div" class="d-flex d-center">
+          <img src="../img/IstanbulCymbalsLogo.jpeg" alt="Istanbul Cymbals" />
+          <img src="../img/ZildjianCymbalsLogo.png" alt="Zildjian Cymbals" />
+          <img src="../img/EvansLogo.png" alt="Evans Drumheads" />
+          <img src="../img/DwLogo.png" alt="DW Drums" />
+          <img src="../img/YamahaLogo.jpeg" alt="Yamaha Drums" />
+          <img src="../img/ProMarkLogo.png" alt="ProMark Drumsticks" />
+          <img src="../img/TamaLogo.png" alt="Tama Drums" />
+        </div>
+      </section>
+      <section id="copyrights" class="d-flex"></section>
+    </footer>
+    <script src="aboutscript.js"></script>
   </body>
 </html>
