Update AboutPage Past Sections

--- a/pages/about.html
+++ b/pages/about.html
@@ -36,13 +36,15 @@
       </section>
     </nav>
     <header class="t-center">
-      <h4>Hello Drummers!</h4>
-      <h1>Legenderies Gathering in Antalya Summit 2021</h1>
-      <h5>
-        Great Drummers of Turkey Gathering for sharing their knowledges,
-        creating positive change in your music life. Join the audiance in
-        October, in Turkey/Antalya.
-      </h5>
+      <hgroup>
+        <h4>Hello Drummers!</h4>
+        <h1>Legenderies Gathering in Antalya Summit 2021</h1>
+        <h5>
+          Great Drummers of Turkey Gathering for sharing their knowledges,
+          creating positive change in your music life. Join the audiance in
+          October, in Turkey/Antalya.
+        </h5>
+      </hgroup>
       <section id="contact">
         <p>
           Please contact us per Email for any further questions about Antalya
