Add Other pages

--- a/pages/about.html
+++ b/pages/about.html
@@ -29,7 +29,7 @@
           <li><a href="../index.html#main-program">Program</a></li>
           <li><a href="../pages/join.html">Join</a></li>
           <li><a href="#parterns">Sponsor</a></li>
-          <li><a href="../pages/">News</a></li>
+          <li><a href="../pages/news.html">News</a></li>
         </ul>
         <div id="mobile-menu-btn" class="d-flex d-center">
           <div id="mobile-menu-burger"></div>
