Add other pages to index.html

--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
         <section id="mobile-menu">
             <div id="mobile-menu-left" class="hide-menu2"></div>
             <ul id="mobile-nav" class="hide-menu">
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="pages/about.html">About</a></li>
-                <li><a href="#">Program</a></li>
-                <li><a href="#">Join</a></li>
-                <li><a href="#">Sponsor</a></li>
-                <li><a href="#">News</a></li>
+                <li><a href="#main-program">Program</a></li>
+                <li><a href="pages/join.html">Join</a></li>
+                <li><a href="#parterns">Sponsor</a></li>
+                <li><a href="pages/news.html">News</a></li>
             </ul>
             <div id="mobile-menu-btn" class="d-flex d-center">
                 <div id="mobile-menu-burger">
