Add Desktop Navbar

--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
                 <li><a href="">Logout</a></li>
               </ul>
             </div>
+            <div id="white-line" class="d-flex">
+                <a href=""><img src="img/icon/MainIcon.png" alt="" id="home-logo"></a>
+                <ul class="d-flex d-center">
+                    <li class="normal-elements"><a href="pages/about.html">About</a></li>
+                    <li class="normal-elements"><a href="#main-program">Program</a></li>
+                    <li class="normal-elements"><a href="pages/join.html">Join</a></li>
+                    <li class="normal-elements"><a href="#parterns">Sponsor</a></li>
+                    <li class="normal-elements"><a href="pages/news.html">News</a></li>
+                    <li><a href="#" id="campaign-logo">ADS Campaign</a></li>
+                </ul>
+            </div>
           </section>
         <section id="mobile-menu">
             <div id="mobile-menu-left" class="hide-menu2"></div>
