--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
         <section id="desktop-menu">
             <div id="black-line">
-              <ul class="d-flex">
+              <ul class="d-flex container">
                 <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
                 <li><a href=""><i class="fab fa-twitter"></i></a></li>
                 <li><a href="">English</a></li>
@@ -23,16 +23,18 @@
                 <li><a href="">Logout</a></li>
               </ul>
             </div>
-            <div id="white-line" class="d-flex">
-                <a href=""><img src="img/icon/MainIcon.png" alt="" id="home-logo"></a>
-                <ul class="d-flex d-center">
-                    <li class="normal-elements"><a href="pages/about.html">About</a></li>
-                    <li class="normal-elements"><a href="#main-program">Program</a></li>
-                    <li class="normal-elements"><a href="pages/join.html">Join</a></li>
-                    <li class="normal-elements"><a href="#parterns">Sponsor</a></li>
-                    <li class="normal-elements"><a href="pages/news.html">News</a></li>
-                    <li><a href="#" id="campaign-logo">ADS Campaign</a></li>
-                </ul>
+            <div id="white-line">
+                <div class="container d-flex d-center">
+                    <a href=""><img src="img/icon/SmallMainIcon.png" alt="" id="home-logo"></a>
+                    <ul class="d-flex d-center">
+                        <li class="normal-elements"><a href="pages/about.html">About</a></li>
+                        <li class="normal-elements"><a href="#main-program">Program</a></li>
+                        <li class="normal-elements"><a href="pages/join.html">Join</a></li>
+                        <li class="normal-elements"><a href="#parterns">Sponsor</a></li>
+                        <li class="normal-elements"><a href="pages/news.html">News</a></li>
+                        <li><a href="#" id="campaign-logo">ADS Campaign</a></li>
+                    </ul>
+                </div>
             </div>
           </section>
         <section id="mobile-menu">
