Add Main Program Desktop

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <header>
         <hgroup>
             <h4>"Hello Drummers!"</h4>
-            <h1>Legenderies Gathering in Antalya Summit 2021</h1>
+            <h1>Legenderies Gathering <br>in Antalya Drummers Summit 2021</h1>
             <h5>Great Drummers of Turkey Gathering for sharing their knowledges, creating positive 
                 change in your music life. Join the audiance in October, in Turkey/Antalya.
             </h5>
@@ -95,6 +95,7 @@
                     <p>Get oppurtinies by meeting fellow drummers.</p>
                 </div>
             </div>
+            <a href="#" id="see-whole">SEE THE WHOLE PROGRAM</a>
             <a href="#" id="join-button" class="t-center">Join Antalya Summit 2021</a>
         </section>
         <section id="featured-speakers">
