Add Speakers Section Desktop

--- a/index.html
+++ b/index.html
@@ -98,10 +98,11 @@
             <a href="#" id="see-whole">SEE THE WHOLE PROGRAM</a>
             <a href="#" id="join-button" class="t-center">Join Antalya Summit 2021</a>
         </section>
-        <section id="featured-speakers">
+        <section id="featured-section">
             <h2>Featured Speakers</h2>
             <div class="underline"></div>
-            <div class="card-speaker d-flex">
+            <div id="featured-speakers">
+                <div class="card-speaker d-flex">
                 <img class="speaker-image" src="..." alt="">
                 <div>
                     <h3 class="speaker-name"></h3>
@@ -109,8 +110,8 @@
                     <div class="speaker-line"></div>
                     <p class="speaker-description"></p>
                 </div>
-            </div>
-            <div class="card-speaker d-flex">
+                </div>
+                <div class="card-speaker d-flex">
                 <img class="speaker-image" src="..." alt="">
                 <div>
                     <h3 class="speaker-name"></h3>
@@ -118,8 +119,8 @@
                     <div class="speaker-line"></div>
                     <p class="speaker-description"></p>
                 </div>
-            </div>
-            <div class="card-speaker d-flex p-fixed ts-1 hide-menu2">
+                </div>
+                <div class="card-speaker d-flex p-fixed ts-1 hide-menu2">
                 <img class="speaker-image" src="..." alt="">
                 <div>
                     <h3 class="speaker-name"></h3>
@@ -127,8 +128,8 @@
                     <div class="speaker-line"></div>
                     <p class="speaker-description"></p>
                 </div>
-            </div>
-            <div class="card-speaker d-flex p-fixed ts-12 hide-menu2">
+                </div>
+                <div class="card-speaker d-flex p-fixed ts-12 hide-menu2">
                 <img class="speaker-image" src="..." alt="">
                 <div>
                     <h3 class="speaker-name"></h3>
@@ -136,8 +137,8 @@
                     <div class="speaker-line"></div>
                     <p class="speaker-description"></p>
                 </div>
-            </div>
-            <div class="card-speaker d-flex p-fixed ts-14 hide-menu2">
+                </div>
+                <div class="card-speaker d-flex p-fixed ts-14 hide-menu2">
                 <img class="speaker-image" src="..." alt="">
                 <div>
                     <h3 class="speaker-name"></h3>
@@ -145,14 +146,15 @@
                     <div class="speaker-line"></div>
                     <p class="speaker-description"></p>
                 </div>
-            </div>
-            <div class="card-speaker d-flex p-fixed ts-16 hide-menu2">
+                </div>
+                <div class="card-speaker d-flex p-fixed ts-16 hide-menu2">
                 <img class="speaker-image" src="..." alt="">
                 <div>
                     <h3 class="speaker-name"></h3>
                     <p class="speaker-resume"></p>
                     <div class="speaker-line"></div>
                     <p class="speaker-description"></p>
+                </div>
                 </div>
             </div>
         </section>
